[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
clap = "4.5.30"
base64 = "0.22.1"
base58 = "0.2.0"
log = "0.4.25"
env_logger = "0.11.6"
thiserror = "2.0.11"
reqwest = "0.12.12"
uuid = { version = "1.13.2", features = ["v4"] }
chrono = "0.4.39"
warp = "0.3.7"
anyhow = "1.0.95"
sled = "0.34.7"
whoami = "1.5.2" 
rand_core = { version = "0.9.1", features = ["os_rng"] }
dashmap = "6.1.0"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crypto_box = { version = "0.9.1" }
bincode = "1.3.3"
zeroize = "1.8.1"
sha2 = "0.10.8"
crossterm = { version = "0.28.1", features = ["event-stream"] }